// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The SingleContributionSalesforceWrites stack matches the snapshot 1`] = `
{
  "Metadata": {
    "gu:cdk:constructs": [],
    "gu:cdk:version": "TEST",
  },
  "Resources": {
    "deadletterssinglecontributionsalesforcewritesqueueA3CB7F4A": {
      "DeletionPolicy": "Delete",
      "Properties": {
        "QueueName": "dead-letters-single-contribution-salesforce-writes-queue-CODE",
        "SqsManagedSseEnabled": true,
        "Tags": [
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "membership",
          },
          {
            "Key": "Stage",
            "Value": "CODE",
          },
        ],
      },
      "Type": "AWS::SQS::Queue",
      "UpdateReplacePolicy": "Delete",
    },
    "singlecontributionsalesforcewritesqueue227D3F6D": {
      "DeletionPolicy": "Delete",
      "Properties": {
        "QueueName": "single-contribution-salesforce-writes-queue-CODE",
        "RedrivePolicy": {
          "deadLetterTargetArn": {
            "Fn::GetAtt": [
              "deadletterssinglecontributionsalesforcewritesqueueA3CB7F4A",
              "Arn",
            ],
          },
          "maxReceiveCount": 3,
        },
        "SqsManagedSseEnabled": true,
        "Tags": [
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "membership",
          },
          {
            "Key": "Stage",
            "Value": "CODE",
          },
        ],
      },
      "Type": "AWS::SQS::Queue",
      "UpdateReplacePolicy": "Delete",
    },
  },
}
`;

exports[`The SingleContributionSalesforceWrites stack matches the snapshot 2`] = `
{
  "Metadata": {
    "gu:cdk:constructs": [],
    "gu:cdk:version": "TEST",
  },
  "Resources": {
    "deadletterssinglecontributionsalesforcewritesqueueA3CB7F4A": {
      "DeletionPolicy": "Delete",
      "Properties": {
        "QueueName": "dead-letters-single-contribution-salesforce-writes-queue-PROD",
        "SqsManagedSseEnabled": true,
        "Tags": [
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "membership",
          },
          {
            "Key": "Stage",
            "Value": "PROD",
          },
        ],
      },
      "Type": "AWS::SQS::Queue",
      "UpdateReplacePolicy": "Delete",
    },
    "singlecontributionsalesforcewritesqueue227D3F6D": {
      "DeletionPolicy": "Delete",
      "Properties": {
        "QueueName": "single-contribution-salesforce-writes-queue-PROD",
        "RedrivePolicy": {
          "deadLetterTargetArn": {
            "Fn::GetAtt": [
              "deadletterssinglecontributionsalesforcewritesqueueA3CB7F4A",
              "Arn",
            ],
          },
          "maxReceiveCount": 3,
        },
        "SqsManagedSseEnabled": true,
        "Tags": [
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "membership",
          },
          {
            "Key": "Stage",
            "Value": "PROD",
          },
        ],
      },
      "Type": "AWS::SQS::Queue",
      "UpdateReplacePolicy": "Delete",
    },
  },
}
`;
